--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -8,6 +8,8 @@
   "customizations": {
     "vscode": {
       "extensions": [
+        "bradlc.vscode-tailwindcss",
+        "csstools.postcss",
         "dbaeumer.vscode-eslint",
         "editorconfig.editorconfig",
         "esbenp.prettier-vscode",
@@ -16,7 +18,8 @@
         "hbenl.vscode-mocha-test-adapter",
         "hbenl.vscode-test-explorer",
         "ms-azuretools.vscode-docker",
-        "prisma.prisma"
+        "prisma.prisma",
+        "dsznajder.es7-react-js-snippets"
       ]
     }
   },
