--- a/lefthook.yml
+++ b/lefthook.yml
@@ -2,10 +2,10 @@ pre-commit:
   parallel: true
   commands:
     eslint:
-      glob: '*.{js,ts,vue}'
+      glob: '*.{js,ts,jsx,tsx}'
       run: pnpm eslint {staged_files}
     prettier:
-      glob: '*.{js,ts,vue,css,yaml,yml}'
+      glob: '*.{js,ts,jsx,tsx,css,yaml,yml}'
       run: pnpm prettier --check {staged_files}
 
 commit-msg:
