--- a/.github/workflows/CD-React.yaml
+++ b/.github/workflows/CD-React.yaml
@@ -47,9 +47,9 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
-      - uses: aws-actions/configure-aws-credentials@v2
+      - uses: aws-actions/configure-aws-credentials@v3
         with:
-          role-to-assume: ${{ secrets.AWS_ROLE_TO_ASSUME_FOR_DEPLOY }}
+          role-to-assume: ${{ secrets.AWS_GITHUB_ACTION_ROLE }}
           aws-region: ${{ env.AWS_REGION }}
 
       - uses: hashicorp/setup-terraform@v2
