--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,7 +15,6 @@
   "dependencies": {
     "@headlessui/react": "^1.7.17",
     "@heroicons/react": "^2.0.18",
-    "@types/prop-types": "^15.7.9",
     "axios": "^1.5.1",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
@@ -39,6 +38,7 @@
     "storybook": "^7.5.1",
     "tailwindcss": "^3.3.3",
     "typescript": "^5.0.2",
-    "vite": "^4.4.5"
+    "vite": "^4.4.5",
+    "@types/prop-types": "^15.7.9"
   }
 }
