--- a/.github/workflows/CI-Deploy.yaml
+++ b/.github/workflows/CI-Deploy.yaml
@@ -6,6 +6,7 @@ on:
     paths:
       - 'aws/**'
       - 'docker/**'
+      - 'backend/**'
 
   push:
     branches:
@@ -13,6 +14,7 @@ on:
     paths:
       - 'aws/**'
       - 'docker/**'
+      - 'backend/**'
 
 permissions:
   id-token: write
