--- a/backend/.mocharc.json
+++ b/backend/.mocharc.json
@@ -4,7 +4,8 @@
   "require": [
     "ts-node/register/transpile-only",
     "tsconfig-paths/register",
-    "./mocha-fixture.ts"
+    "./mocha-fixture.ts",
+    "@swc/register"
   ],
   "reporter": "dot"
 }
