--- a/backend/package.json
+++ b/backend/package.json
@@ -6,7 +6,7 @@
     "start": "nest start",
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
-    "start:prod": "node dist/apps/backend/main",
+    "start:prod": "node dist/main.js",
     "lint": "eslint . --ext .js,.ts",
     "format:check": "prettier --check .",
     "test": "mocha \"*/**/*.spec.ts\"",
@@ -32,6 +32,7 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "cookie-parser": "^1.4.6",
+    "express": "^4.18.2",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.1",
     "reflect-metadata": "^0.1.13",
@@ -41,6 +42,9 @@
     "@nestjs/cli": "^10.2.1",
     "@nestjs/schematics": "^10.0.3",
     "@nestjs/testing": "^10.2.8",
+    "@swc/cli": "^0.1.62",
+    "@swc/core": "^1.3.96",
+    "@swc/register": "^0.1.10",
     "@types/cache-manager": "^4.0.5",
     "@types/chai": "^4.3.10",
     "@types/chai-as-promised": "^7.1.8",
