--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.18.0",
     "redux": "^4.2.1"
   },
   "devDependencies": {
@@ -30,15 +31,16 @@
     "@storybook/react": "^7.5.3",
     "@storybook/react-vite": "^7.5.3",
     "@storybook/testing-library": "^0.2.2",
+    "@types/prop-types": "^15.7.10",
     "@types/react": "^18.2.37",
     "@types/react-dom": "^18.2.15",
     "@vitejs/plugin-react-swc": "^3.4.1",
     "autoprefixer": "^10.4.16",
     "postcss": "^8.4.31",
     "storybook": "^7.5.3",
+    "storybook-addon-react-router-v6": "^2.0.9",
     "tailwindcss": "^3.3.5",
     "typescript": "^5.2.2",
-    "vite": "^4.5.0",
-    "@types/prop-types": "^15.7.10"
+    "vite": "^4.5.0"
   }
 }
