--- a/backend/package.json
+++ b/backend/package.json
@@ -67,5 +67,8 @@
     "ts-node": "^10.9.1",
     "tsconfig-paths": "^4.2.0",
     "typescript": "^5.2.2"
+  },
+  "prisma": {
+    "seed": "swc-node prisma/seed.ts"
   }
 }
