chore: apply nyc for test coverage (#49)
* chore: apply nyc for test coverage

* fix: modify nyc configure

--- a/.github/workflows/CI-Nest.yaml
+++ b/.github/workflows/CI-Nest.yaml
@@ -9,8 +9,6 @@ on:
   push:
     branches:
       - main
-    paths:
-      - 'backend/**'
 
 jobs:
   build:
@@ -128,4 +126,4 @@ jobs:
         run: pnpm --filter backend exec tsc --noEmit
 
       - name: Test
-        run: pnpm --filter backend test
+        run: pnpm --filter backend test:coverage
