--- a/backend/package.json
+++ b/backend/package.json
@@ -10,7 +10,8 @@
     "lint": "eslint . --ext .js,.ts",
     "format:check": "prettier --check .",
     "test": "mocha \"*/**/*.spec.ts\"",
-    "test:debug": "mocha --inspect \"*/**/*.spec.ts\""
+    "test:debug": "mocha --inspect \"*/**/*.spec.ts\"",
+    "test:coverage": "nyc pnpm run test"
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.454.0",
@@ -39,6 +40,7 @@
     "rxjs": "^7.8.1"
   },
   "devDependencies": {
+    "@istanbuljs/nyc-config-typescript": "^1.0.2",
     "@nestjs/cli": "^10.2.1",
     "@nestjs/schematics": "^10.0.3",
     "@nestjs/testing": "^10.2.9",
@@ -59,6 +61,7 @@
     "chai": "^4.3.10",
     "chai-as-promised": "^7.1.1",
     "mocha": "^10.2.0",
+    "nyc": "^15.1.0",
     "prisma": "^5.6.0",
     "proxyquire": "^2.1.3",
     "sinon": "^17.0.1",
