feat: implements team and team-league module (#52)
* feat: save commit

* feat: implements team service and team-league service

* feat: implements team service test codes

* fix: reset prisma migrate histories

* fix: apply added deletedAt column on test

* feat: add registerTeamRequest_table

* fix: modify typo

* fix: modify typo

* feat: save commit

* feat: save commit

* style: modify hbs template

* feat: implements team and team-league module

* fix: test code types

--- a/backend/.nycrc
+++ b/backend/.nycrc
@@ -2,7 +2,13 @@
   "extends": "@istanbuljs/nyc-config-typescript",
   "all": true,
   "include": ["src/**/*.service.ts"],
-  "exclude": ["src/**/*.spec.ts", "src/main.ts"],
+  "exclude": [
+    "src/**/*.spec.ts",
+    "src/**/cache-config.service.ts",
+    "src/**/mailer-config.service.ts",
+    "src/**/prisma.service.ts",
+    "src/**/abstract/**"
+  ],
   "extension": [".ts"],
   "report-dir": "./.nyc_output/report",
   "temp-dir": "./.nyc_output/temp",
