--- a/backend/.swcrc
+++ b/backend/.swcrc
@@ -17,7 +17,10 @@
     "paths": {
       "@/*": ["src/*"]
     },
-    "baseUrl": "./"
+    "baseUrl": "./",
+    "experimental": {
+      "plugins": [["swc-plugin-coverage-instrument", {}]]
+    }
   },
   "module": {
     "type": "commonjs",
