--- a/backend/.mocharc.json
+++ b/backend/.mocharc.json
@@ -1,6 +1,7 @@
 {
   "$schema": "https://json.schemastore.org/mocharc",
   "extension": "spec.ts",
+  "enable-source-maps": true,
   "require": ["@swc/register", "tsconfig-paths/register", "./mocha-fixture.ts"],
   "reporter": "spec"
 }
