--- a/backend/package.json
+++ b/backend/package.json
@@ -66,6 +66,7 @@
     "proxyquire": "^2.1.3",
     "sinon": "^17.0.1",
     "source-map-support": "^0.5.21",
+    "swc-plugin-coverage-instrument": "^0.0.20",
     "ts-loader": "^9.5.1",
     "ts-node": "^10.9.1",
     "tsconfig-paths": "^4.2.0",
