--- a/backend/.nycrc
+++ b/backend/.nycrc
@@ -7,7 +7,8 @@
     "src/**/cache-config.service.ts",
     "src/**/mailer-config.service.ts",
     "src/**/prisma.service.ts",
-    "src/**/abstract/**"
+    "src/**/abstract/**",
+    "src/**/storage/**"
   ],
   "extension": [".ts"],
   "report-dir": "./.nyc_output/report",
