--- a/backend/package.json
+++ b/backend/package.json
@@ -37,7 +37,8 @@
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.1",
     "reflect-metadata": "^0.1.13",
-    "rxjs": "^7.8.1"
+    "rxjs": "^7.8.1",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "@istanbuljs/nyc-config-typescript": "^1.0.2",
@@ -52,12 +53,14 @@
     "@types/chai-as-promised": "^7.1.8",
     "@types/express": "^4.17.21",
     "@types/mocha": "^10.0.6",
+    "@types/multer": "^1.4.11",
     "@types/node": "^20.10.0",
     "@types/passport": "^1.0.16",
     "@types/passport-jwt": "^3.0.13",
     "@types/proxyquire": "^1.3.31",
     "@types/sinon": "^17.0.2",
     "@types/supertest": "^2.0.16",
+    "@types/uuid": "^9.0.7",
     "chai": "^4.3.10",
     "chai-as-promised": "^7.1.1",
     "mocha": "^10.2.0",
