--- a/backend/package.json
+++ b/backend/package.json
@@ -34,6 +34,7 @@
     "class-validator": "^0.14.0",
     "cookie-parser": "^1.4.6",
     "express": "^4.18.2",
+    "mime-types": "^2.1.35",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "reflect-metadata": "^0.1.13",
@@ -52,6 +53,7 @@
     "@types/chai": "^4.3.11",
     "@types/chai-as-promised": "^7.1.8",
     "@types/express": "^4.17.21",
+    "@types/mime-types": "^2.1.4",
     "@types/mocha": "^10.0.6",
     "@types/multer": "^1.4.11",
     "@types/node": "^20.10.3",
