feat: add thunder-client on devconatiner (#75)

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -19,7 +19,8 @@
         "hbenl.vscode-test-explorer",
         "ms-azuretools.vscode-docker",
         "prisma.prisma",
-        "dsznajder.es7-react-js-snippets"
+        "dsznajder.es7-react-js-snippets",
+        "rangav.vscode-thunder-client"
       ]
     }
   },
