docs: add thunder client settings on vscode workspace (#77)
* docs: add thunder-client settings on vscode workspace

* style: disable prettier on thunder-client data

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,5 +7,6 @@
   },
   "[terraform]": {
     "editor.defaultFormatter": "hashicorp.terraform"
-  }
+  },
+  "thunder-client.saveToWorkspace": true
 }
