--- a/backend/.nycrc
+++ b/backend/.nycrc
@@ -8,7 +8,8 @@
     "src/**/mailer-config.service.ts",
     "src/**/prisma.service.ts",
     "src/**/abstract/**",
-    "src/**/storage/**"
+    "src/**/storage/**",
+    "src/**/service/{association,game,league,score,sponser,team,team-league}.service.ts"
   ],
   "extension": [".ts"],
   "report-dir": "./.nyc_output/report",
