--- a/.github/workflows/CD-ALL.yaml
+++ b/.github/workflows/CD-ALL.yaml
@@ -1,4 +1,4 @@
-name: CD-AWS
+name: DEPLOY-ALL
 
 on:
   workflow_dispatch:
@@ -66,7 +66,7 @@ jobs:
   deploy:
     name: Deploy
     runs-on: ubuntu-latest
-    needs: [build]
+    needs: [build-backend, build-frontend]
     environment: production
     defaults:
       run:
