--- a/backend/package.json
+++ b/backend/package.json
@@ -14,8 +14,10 @@
     "test:coverage": "nyc pnpm run test"
   },
   "dependencies": {
+    "@aws-sdk/client-cloudfront": "^3.474.0",
     "@aws-sdk/client-s3": "^3.474.0",
     "@aws-sdk/client-ses": "^3.474.0",
+    "@aws-sdk/cloudfront-signer": "^3.468.0",
     "@aws-sdk/credential-provider-node": "^3.474.0",
     "@nestjs-modules/mailer": "^1.9.1",
     "@nestjs/cache-manager": "^2.1.1",
@@ -28,6 +30,7 @@
     "@nestjs/swagger": "^7.1.17",
     "@prisma/client": "5.7.0",
     "argon2": "^0.31.2",
+    "aws-sdk": "^2.1520.0",
     "cache-manager": "^5.3.1",
     "cache-manager-redis-yet": "^4.1.2",
     "class-transformer": "^0.5.1",
