feat: implements account-credential and account-certification services (#99)
* feat: save commit

* chore: save commit

* chore: save commit

* chore: save commit

* feat: implements profile module

* chore: modify typo and add some documents

* feat: implements profile controller

--- a/backend/.nycrc
+++ b/backend/.nycrc
@@ -9,7 +9,8 @@
     "src/**/prisma.service.ts",
     "src/**/abstract/**",
     "src/**/storage/**",
-    "src/**/service/{association,game,league,score,sponser,team,team-league}.service.ts"
+    "src/**/service/{association,game,league,score,sponser,team,team-league}.service.ts",
+    "src/**/cloudfront-auth.service.ts"
   ],
   "extension": [".ts"],
   "report-dir": "./.nyc_output/report",
