feat: leagueDetail & association & adminConsole 작업 (#100)
* feat: leagueDetail & association & adminConsole 작업

* chore: modfiy pnpm-lock.yaml

* feat: leagueDetail & Association & AdminConsole 작업

* feat: leagueDetail & Association & AdminConsole 작업

* feat: leagueDetail & association & AdminConsole 작업

---------

Co-authored-by: jspark2000 <idpjs2000@gmail.com>

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,14 +13,19 @@
     "build-storybook": "storybook build"
   },
   "dependencies": {
+    "@googlemaps/js-api-loader": "^1.16.2",
     "@headlessui/react": "^1.7.17",
     "@heroicons/react": "^2.1.1",
     "@reduxjs/toolkit": "^2.0.1",
+    "@types/react-redux": "^7.1.33",
     "axios": "^1.6.2",
+    "draft-js": "^0.11.7",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
+    "react-datepicker": "^4.25.0",
     "react-dom": "^18.2.0",
-    "react-redux": "^9.0.4",
+    "react-draft-wysiwyg": "^1.15.0",
+    "react-redux": "^7.2.0",
     "react-router-dom": "^6.21.0",
     "redux": "^5.0.0"
   },
@@ -33,9 +38,13 @@
     "@storybook/react": "^7.6.6",
     "@storybook/react-vite": "^7.6.6",
     "@storybook/testing-library": "^0.2.2",
+    "@types/draft-js": "^0.11.16",
+    "@types/google.maps": "^3.54.10",
     "@types/prop-types": "^15.7.11",
     "@types/react": "^18.2.45",
+    "@types/react-datepicker": "^4.19.4",
     "@types/react-dom": "^18.2.18",
+    "@types/react-draft-wysiwyg": "^1.13.7",
     "@vitejs/plugin-react-swc": "^3.5.0",
     "autoprefixer": "^10.4.16",
     "postcss": "^8.4.32",
