feat: implements joinleague service (#118)
* chore: save commit

* feat: implements join-league service

* feat: implements cloudfront-signed-cookie-controller

* docs: add documents about cloudfront-certification

--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -13,3 +13,6 @@ RUN architecture=$(dpkg --print-architecture) && if [ "$architecture" = "arm64" 
     && unzip awscli.zip \
     && ./aws/install \
     && rm -rf aws awscli.zip
+
+# Set NODE_ENV as Dev
+ENV NODE_ENV=development
