--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,8 +3,8 @@
   "private": true,
   "version": "0.0.0",
   "scripts": {
-    "dev": "vite",
-    "build": "tsc && vite build",
+    "dev": "vite --mode development",
+    "build": "tsc && vite build --mode production",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "format": "prettier --write .",
     "format:check": "prettier --check .",
@@ -13,6 +13,13 @@
     "build-storybook": "storybook build"
   },
   "dependencies": {
+    "@ckeditor/ckeditor5-build-classic": "^40.2.0",
+    "@ckeditor/ckeditor5-core": "^40.2.0",
+    "@ckeditor/ckeditor5-react": "^6.2.0",
+    "@ckeditor/ckeditor5-theme-lark": "^40.2.0",
+    "@ckeditor/ckeditor5-upload": "^40.2.0",
+    "@ckeditor/ckeditor5-utils": "^40.2.0",
+    "@ckeditor/vite-plugin-ckeditor5": "^0.1.3",
     "@googlemaps/js-api-loader": "^1.16.2",
     "@headlessui/react": "^1.7.17",
     "@heroicons/react": "^2.1.1",
@@ -38,6 +45,7 @@
     "@storybook/react": "^7.6.7",
     "@storybook/react-vite": "^7.6.7",
     "@storybook/testing-library": "^0.2.2",
+    "@tailwindcss/typography": "^0.5.10",
     "@types/draft-js": "^0.11.17",
     "@types/google.maps": "^3.54.10",
     "@types/prop-types": "^15.7.11",
