--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -26,6 +26,6 @@
     }
   },
   "include": ["src/**/*.ts", "src/**/*.tsx"],
-  "exclude": ["node_modules"],
+  "exclude": ["node_modules", "src/**/*.stoires.ts"],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
