--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "build-storybook": "storybook build"
   },
   "dependencies": {
+    "@ckeditor/ckeditor5-alignment": "^40.2.0",
     "@ckeditor/ckeditor5-build-classic": "^40.2.0",
     "@ckeditor/ckeditor5-core": "^40.2.0",
     "@ckeditor/ckeditor5-react": "^6.2.0",
