--- a/backend/package.json
+++ b/backend/package.json
@@ -31,6 +31,7 @@
     "@prisma/client": "5.7.1",
     "argon2": "^0.31.2",
     "aws-sdk": "^2.1531.0",
+    "axios": "^1.6.5",
     "cache-manager": "^5.3.2",
     "cache-manager-redis-yet": "^4.1.2",
     "class-transformer": "^0.5.1",
