--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,11 +21,8 @@
     "@ckeditor/ckeditor5-upload": "^40.2.0",
     "@ckeditor/ckeditor5-utils": "^40.2.0",
     "@ckeditor/vite-plugin-ckeditor5": "^0.1.3",
-    "@googlemaps/js-api-loader": "^1.16.2",
     "@headlessui/react": "^1.7.18",
     "@heroicons/react": "^2.1.1",
-    "@reduxjs/toolkit": "^2.0.1",
-    "@types/react-redux": "^7.1.33",
     "axios": "^1.6.5",
     "draft-js": "^0.11.7",
     "prop-types": "^15.8.1",
@@ -33,9 +30,8 @@
     "react-datepicker": "^4.25.0",
     "react-dom": "^18.2.0",
     "react-draft-wysiwyg": "^1.15.0",
-    "react-redux": "^7.2.9",
     "react-router-dom": "^6.21.2",
-    "redux": "^5.0.1"
+    "recoil": "^0.7.7"
   },
   "devDependencies": {
     "@storybook/addon-essentials": "^7.6.8",
@@ -48,7 +44,6 @@
     "@storybook/testing-library": "^0.2.2",
     "@tailwindcss/typography": "^0.5.10",
     "@types/draft-js": "^0.11.17",
-    "@types/google.maps": "^3.54.10",
     "@types/prop-types": "^15.7.11",
     "@types/react": "^18.2.47",
     "@types/react-datepicker": "^4.19.5",
