--- a/backend/package.json
+++ b/backend/package.json
@@ -39,6 +39,7 @@
     "cookie-parser": "^1.4.6",
     "express": "^4.18.2",
     "mime-types": "^2.1.35",
+    "nodemailer": "^6.9.8",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "reflect-metadata": "^0.2.1",
