feat: implements profile and roster components on console page (#145)

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -38,6 +38,7 @@
     "@storybook/addon-interactions": "^7.6.8",
     "@storybook/addon-links": "^7.6.8",
     "@storybook/addon-onboarding": "^1.0.10",
+    "@storybook/addon-viewport": "^7.6.8",
     "@storybook/blocks": "^7.6.8",
     "@storybook/react": "^7.6.8",
     "@storybook/react-vite": "^7.6.8",
