--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,6 +23,7 @@
     "@ckeditor/vite-plugin-ckeditor5": "^0.1.3",
     "@headlessui/react": "^1.7.18",
     "@heroicons/react": "^2.1.1",
+    "@tailwindcss/forms": "^0.5.7",
     "axios": "^1.6.5",
     "draft-js": "^0.11.7",
     "prop-types": "^15.8.1",
