--- a/backend/package.json
+++ b/backend/package.json
@@ -70,6 +70,7 @@
     "@types/uuid": "^9.0.7",
     "chai": "^4.4.1",
     "chai-as-promised": "^7.1.1",
+    "crypto": "^1.0.1",
     "mocha": "^10.2.0",
     "nyc": "^15.1.0",
     "prisma": "^5.8.0",
